[package]
name = "wasm-call-wasm"
version = "0.1.0"
authors = ["Lucas <sishsh@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ontio-std = {git="https://github.com/ontio/ontology-wasm-cdt-rust"}
etcommon-hexutil = { version = "0.2.4", default-features = false }